added api controllers db set up and imports sorted cleared up unused pages and currently testing createTest

--- a/Server/appsettings.json
+++ b/Server/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-FinalYearProject.Server-1A0744F1-F282-49EF-9750-293B1D1725E3;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=FinalYearProject"
   },
   "Logging": {
     "LogLevel": {
