--- a/Client/FinalYearProject.Client.csproj
+++ b/Client/FinalYearProject.Client.csproj
@@ -18,4 +18,9 @@
     <ProjectReference Include="..\Shared\FinalYearProject.Shared.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Pages\Student\" />
+    <Folder Include="Pages\StudentExam\" />
+  </ItemGroup>
+
 </Project>
